Revert "bar fixed and text aligned"
This reverts commit a4995d6d6ab2ef47a476a95a9ee4626a3398ccb9.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -175,7 +175,7 @@ input[type="submit"] {
 
 /* Form */
 .contact-form {
-  width: 97.5%;
+  width: 97%;
   margin: 0 auto;
   background: #fff;
 }
@@ -205,8 +205,7 @@ input[type="checkbox"] {
 
 #find-us {
   height: 10%;
-  width: 42.7%;
-  margin-right: 70px;
+  width: 50%;
 }
 
 *:focus {
